The language part has been done, the settings part will be set modally, there may be add-ons in the main menu section, or there may be a new menu directly

--- a/Data/language/en.json
+++ b/Data/language/en.json
@@ -1,3 +1,8 @@
 {
-    
+    "UPDATE":"Update",
+    "WELCOME_MESSAGE":"Pha",
+    "MENTAL_HEALTH_MESSAGE":"Akıneli",
+    "MENTAL_DESCRIPTION":"Akıl sağle sağ üstten bakabilmenizi sağlar.",
+    "GHOST_HELPER_MESSAGE":"Hayısı",
+    "GHOST_HELPER_DESCRIPTION":"So tahmin edebilir."
 }
