--- a/Data/language/tr.json
+++ b/Data/language/tr.json
@@ -1,3 +1,27 @@
 {
-    
+  
+    "TRANSLATOR":"Byeco",
+  
+    "UPDATE":"Güncelle",
+    "WELCOME_MESSAGE":"PhasmaMate'e Hoşgeldin",
+    "MENTAL_HEALTH_MESSAGE":"Akıl Sağlığı Paneli",
+    "MENTAL_DESCRIPTION":"Akıl sağlığınıza arabadan bakmak yerine sağ üstten bakabilmenizi sağlar.",
+    "GHOST_HELPER_MESSAGE":"Hayalet Yardımcısı",
+    "GHOST_HELPER_DESCRIPTION":"Sorduğu sorulara cevap vererek size hayaleti tahmin edebilir.",
+    "STEP_DETECTION_MESSAGE":"Adım Algılayan",
+    "STEP_DETECTION_DESCRIPTION":"Bu sistem Ai sistemiyle ayarlanıyor hata payı elbet olabilir.",
+
+
+    "SETTİNGS":"BURASIDA BOŞ NE İSTERSEN YAP",
+
+    "S":"",
+    "SS":"",
+    "SSS":"",
+
+    "GHOST_İNFO":"EVET AMK BURAYI BOŞ BIRAKABİLİRSİN EASTER EGG",
+   
+    "CHECK_MESSAGE":"PhasmaMate başarılı şekilde açıldı.",
+    "AİRBALL_MESSAGE":"Hayalet hava topu etinliği yaptı mı?",
+    "FAVOURİTE_ROOM_MESSAGE":"Favori oda değiştirdi mi?" 
+
 }
