The homepage is set

--- a/Data/language/tr.json
+++ b/Data/language/tr.json
@@ -3,6 +3,7 @@
     "TRANSLATOR":"Byeco",
   
     "UPDATE":"Güncelle",
+    "PLUGİN_MESSAGE":"Eklentiler",
     "WELCOME_MESSAGE":"PhasmaMate'e Hoşgeldin",
     "MENTAL_HEALTH_MESSAGE":"Akıl Sağlığı Paneli",
     "MENTAL_DESCRIPTION":"Akıl sağlığınıza arabadan bakmak yerine sağ üstten bakabilmenizi sağlar.",
